add embedding layer

--- a/prototype.ipynb
+++ b/prototype.ipynb
@@ -105,6 +105,9 @@
     "from tokenizers.pre_tokenizers import Whitespace\n",
     "\n",
     "\n",
+    "vocab_size = 37000\n",
+    "\n",
+    "\n",
     "def batch_iterator(batch_size: int = 100):\n",
     "    for lang in [\"de\", \"en\"]:\n",
     "        for key in [\"train\", \"validation\", \"test\"]:\n",
@@ -113,7 +116,7 @@
     "\n",
     "\n",
     "tokenizer = Tokenizer(BPE(unk_token=\"[UNK]\"))\n",
-    "trainer = BpeTrainer(vocab_size=37000, special_tokens=[\"[UNK]\", \"[CLS]\", \"[SEP]\", \"[PAD]\", \"[MASK]\"])\n",
+    "trainer = BpeTrainer(vocab_size=vocab_size, special_tokens=[\"[UNK]\", \"[CLS]\", \"[SEP]\", \"[PAD]\", \"[MASK]\"])\n",
     "tokenizer.pre_tokenizer = Whitespace()\n",
     "tokenizer.train_from_iterator(batch_iterator(), trainer=trainer, length=sum([len(_) for _ in dataset.values()]))\n",
     "tokenizer.save(\"tokenizer-wmt14-de-en.json\")"
@@ -128,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,11 +151,17 @@
     "        self.dim_feedforward = dim_feedforward\n",
     "        self.dropout = dropout\n",
     "\n",
-    "\n",
-    "# allow adding methods to a class\n",
-    "def add_to_class(cls):\n",
+    "# allow adding new methods to a class\n",
+    "def add_method(cls):\n",
     "    def decorator(func):\n",
     "        setattr(cls, func.__name__, func)\n",
+    "        return func\n",
+    "    return decorator\n",
+    "\n",
+    "# allow adding new properties to a class\n",
+    "def add_property(cls):\n",
+    "    def decorator(func):\n",
+    "        setattr(cls, func.__name__, property(func))\n",
     "        return func\n",
     "    return decorator"
    ]
@@ -161,7 +170,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Embedding Layer"
+    "### Embedding Layer\n",
+    "\n",
+    "The same layer (weights) is used for both the input and output embeddings."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@add_property(Transformer)\n",
+    "def embedding(self):\n",
+    "    if not hasattr(self, \"_embedding\"):\n",
+    "        self._embedding = nn.Embedding(tokenizer.get_vocab_size(), self.d_model)\n",
+    "    return self._embedding"
    ]
   },
   {
@@ -210,7 +234,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Loss Function"
+    "### Build Transformer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.38076211 0.46243897 0.82224138 0.27802744 0.68888738]\n",
+      "[0.38076211 0.46243897 0.82224138 0.27802744 0.68888738]\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = Transformer()\n",
+    "print(model.embedding)\n",
+    "print(model.embedding)"
    ]
   },
   {
