transformer from scratch first time run

--- a/transformer_from_scratch/tmp.ipynb
+++ b/transformer_from_scratch/tmp.ipynb
@@ -78,22 +78,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "torch.Size([1, 60, 32])"
+       "tensor([[[[0.7502, 0.7426, 0.4098, 0.7616],\n",
+       "          [0.2603, 0.5691, 0.5057, 0.1773],\n",
+       "          [0.9481, 0.9260, 0.3191, 0.0557]],\n",
+       "\n",
+       "         [[0.1451, 0.2990, 0.9278, 0.4541],\n",
+       "          [0.3045, 0.5959, 0.7071, 0.1205],\n",
+       "          [0.8474, 0.9261, 0.2110, 0.6648]]]])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "torch.zeros(1, 60, 32).shape"
+    "a = torch.rand(1, 2, 3, 4)\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[[[[0.7502, 0.7426],\n",
+       "           [0.4098, 0.7616]],\n",
+       "\n",
+       "          [[0.2603, 0.5691],\n",
+       "           [0.5057, 0.1773]],\n",
+       "\n",
+       "          [[0.9481, 0.9260],\n",
+       "           [0.3191, 0.0557]]],\n",
+       "\n",
+       "\n",
+       "         [[[0.1451, 0.2990],\n",
+       "           [0.9278, 0.4541]],\n",
+       "\n",
+       "          [[0.3045, 0.5959],\n",
+       "           [0.7071, 0.1205]],\n",
+       "\n",
+       "          [[0.8474, 0.9261],\n",
+       "           [0.2110, 0.6648]]]]])"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.reshape(1, 2, 3, 2, 2)"
    ]
   },
   {
