--- a/transformer_from_scratch/transformer_autotokenizer.ipynb
+++ b/transformer_from_scratch/transformer_autotokenizer.ipynb
@@ -144,7 +144,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d68d7d54e8af41c992f88d063ee6529d",
+       "model_id": "1f245ce47343494cbf51699cd4eb942d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -158,7 +158,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e0fdf32619394d5180f866f8ea7268f1",
+       "model_id": "bd3096d5b25e4678bdef64281db5edf4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -172,7 +172,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "863e4a8c7a38443d8021e2fda64ed7e4",
+       "model_id": "c2eb0c912b2548b787a09e79307d0f6a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -190,13 +190,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5d0cd2640ffc4e1fa158654cbe244edf",
+       "model_id": "5397345e05e94ce99130585bff0781a5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -210,7 +210,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ea76a50702944a6bb1c4b5224a416ca2",
+       "model_id": "10ee9334666d4255bda2c52534d7a9f4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -224,7 +224,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a985aa9247164cf19dfd3127138191ac",
+       "model_id": "1015b68224b14ca79511093d94470628",
        "version_major": 2,
        "version_minor": 0
       },
@@ -238,7 +238,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e67ff5f93bf14d0fbff72a409b919f64",
+       "model_id": "0e0e4c790b83442aab823d558ed4379f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -252,7 +252,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5903c23f6dd74d198f36d7ec331531c4",
+       "model_id": "f1823b1d8eec473bae2b53ffefcdb0b5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -266,7 +266,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7e77ed65f5b84efa897620ef5795e13f",
+       "model_id": "2f7ff033d5a24fada9ead6d7de65c647",
        "version_major": 2,
        "version_minor": 0
       },
@@ -281,7 +281,7 @@
    "source": [
     "dataloader = {}\n",
     "for split in [\"train\", \"validation\", \"test\"]:\n",
-    "    dataloader[split] = dataset.get_dataloader(split=split, batch_size=64, shuffle=True, min_len=1, max_len=128)\n"
+    "    dataloader[split] = dataset.get_dataloader(split=split, batch_size=32, shuffle=True, min_len=1, max_len=128)\n"
    ]
   },
   {
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -392,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -401,22 +401,25 @@
      "text": [
       "-------------------------------\n",
       "Epoch 1/1\n",
-      "Accuracy: 0.0%, Avg loss: 11.689628  [   64/44871]  [0:00:13 < 2:33:29]\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[10], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m transformer\u001b[39m.\u001b[39;49mtrain(dataloader, model, loss_fn, optimizer, scheduler)\n",
-      "File \u001b[0;32m~/GitHub/learn-transformer/transformer_from_scratch/transformer_automl.py:89\u001b[0m, in \u001b[0;36mTransformer.train\u001b[0;34m(self, dataloader, model, loss_fn, optimizer, scheduler, epochs)\u001b[0m\n\u001b[1;32m     87\u001b[0m log(\u001b[39m\"\u001b[39m\u001b[39m-------------------------------\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mtrain.log\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m     88\u001b[0m log(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mEpoch \u001b[39m\u001b[39m{\u001b[39;00mi\u001b[39m+\u001b[39m\u001b[39m1\u001b[39m\u001b[39m}\u001b[39;00m\u001b[39m/\u001b[39m\u001b[39m{\u001b[39;00mepochs\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mtrain.log\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m---> 89\u001b[0m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mtrain_epoch(dataloader[\u001b[39m\"\u001b[39;49m\u001b[39mtrain\u001b[39;49m\u001b[39m\"\u001b[39;49m], model, loss_fn, optimizer, scheduler)\n\u001b[1;32m     90\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mvalidate(dataloader[\u001b[39m\"\u001b[39m\u001b[39mvalidation\u001b[39m\u001b[39m\"\u001b[39m], model, loss_fn)\n\u001b[1;32m     91\u001b[0m torch\u001b[39m.\u001b[39msave(model\u001b[39m.\u001b[39mstate_dict(), \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mmodel_\u001b[39m\u001b[39m{\u001b[39;00mi\u001b[39m+\u001b[39m\u001b[39m1\u001b[39m\u001b[39m}\u001b[39;00m\u001b[39m.pth\u001b[39m\u001b[39m\"\u001b[39m)\n",
-      "File \u001b[0;32m~/GitHub/learn-transformer/transformer_from_scratch/transformer_automl.py:43\u001b[0m, in \u001b[0;36mTransformer.train_epoch\u001b[0;34m(self, dataloader, model, loss_fn, optimizer, scheduler)\u001b[0m\n\u001b[1;32m     40\u001b[0m loss \u001b[39m=\u001b[39m loss_fn(pred[label_mask], label[label_mask])\n\u001b[1;32m     42\u001b[0m \u001b[39m# Optimization\u001b[39;00m\n\u001b[0;32m---> 43\u001b[0m loss\u001b[39m.\u001b[39;49mbackward()\n\u001b[1;32m     44\u001b[0m optimizer\u001b[39m.\u001b[39mstep()\n\u001b[1;32m     45\u001b[0m scheduler\u001b[39m.\u001b[39mstep()\n",
-      "File \u001b[0;32m~/miniconda3/envs/huggingface-transformer/lib/python3.10/site-packages/torch/_tensor.py:487\u001b[0m, in \u001b[0;36mTensor.backward\u001b[0;34m(self, gradient, retain_graph, create_graph, inputs)\u001b[0m\n\u001b[1;32m    477\u001b[0m \u001b[39mif\u001b[39;00m has_torch_function_unary(\u001b[39mself\u001b[39m):\n\u001b[1;32m    478\u001b[0m     \u001b[39mreturn\u001b[39;00m handle_torch_function(\n\u001b[1;32m    479\u001b[0m         Tensor\u001b[39m.\u001b[39mbackward,\n\u001b[1;32m    480\u001b[0m         (\u001b[39mself\u001b[39m,),\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    485\u001b[0m         inputs\u001b[39m=\u001b[39minputs,\n\u001b[1;32m    486\u001b[0m     )\n\u001b[0;32m--> 487\u001b[0m torch\u001b[39m.\u001b[39;49mautograd\u001b[39m.\u001b[39;49mbackward(\n\u001b[1;32m    488\u001b[0m     \u001b[39mself\u001b[39;49m, gradient, retain_graph, create_graph, inputs\u001b[39m=\u001b[39;49minputs\n\u001b[1;32m    489\u001b[0m )\n",
-      "File \u001b[0;32m~/miniconda3/envs/huggingface-transformer/lib/python3.10/site-packages/torch/autograd/__init__.py:200\u001b[0m, in \u001b[0;36mbackward\u001b[0;34m(tensors, grad_tensors, retain_graph, create_graph, grad_variables, inputs)\u001b[0m\n\u001b[1;32m    195\u001b[0m     retain_graph \u001b[39m=\u001b[39m create_graph\n\u001b[1;32m    197\u001b[0m \u001b[39m# The reason we repeat same the comment below is that\u001b[39;00m\n\u001b[1;32m    198\u001b[0m \u001b[39m# some Python versions print out the first line of a multi-line function\u001b[39;00m\n\u001b[1;32m    199\u001b[0m \u001b[39m# calls in the traceback and some print out the last line\u001b[39;00m\n\u001b[0;32m--> 200\u001b[0m Variable\u001b[39m.\u001b[39;49m_execution_engine\u001b[39m.\u001b[39;49mrun_backward(  \u001b[39m# Calls into the C++ engine to run the backward pass\u001b[39;49;00m\n\u001b[1;32m    201\u001b[0m     tensors, grad_tensors_, retain_graph, create_graph, inputs,\n\u001b[1;32m    202\u001b[0m     allow_unreachable\u001b[39m=\u001b[39;49m\u001b[39mTrue\u001b[39;49;00m, accumulate_grad\u001b[39m=\u001b[39;49m\u001b[39mTrue\u001b[39;49;00m)\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+      "Accuracy: 0.0%, Avg loss: 11.712190  [   32/44871]  [0:00:01 < 0:34:47]\n",
+      "Accuracy: 6.0%, Avg loss: 10.593184  [ 3232/44871]  [0:00:11 < 0:02:33]\n",
+      "Accuracy: 6.1%, Avg loss: 9.553990  [ 6432/44871]  [0:00:25 < 0:02:30]\n",
+      "Accuracy: 7.9%, Avg loss: 8.106108  [ 9632/44871]  [0:00:35 < 0:02:10]\n",
+      "Accuracy: 9.5%, Avg loss: 6.934913  [12832/44871]  [0:00:45 < 0:01:54]\n",
+      "Accuracy: 13.4%, Avg loss: 6.456066  [16032/44871]  [0:00:55 < 0:01:40]\n",
+      "Accuracy: 16.2%, Avg loss: 6.119982  [19232/44871]  [0:01:06 < 0:01:29]\n",
+      "Accuracy: 16.3%, Avg loss: 5.916625  [22432/44871]  [0:01:17 < 0:01:17]\n",
+      "Accuracy: 17.3%, Avg loss: 5.838714  [25632/44871]  [0:01:27 < 0:01:05]\n",
+      "Accuracy: 17.9%, Avg loss: 5.733085  [28832/44871]  [0:01:37 < 0:00:54]\n",
+      "Accuracy: 18.7%, Avg loss: 5.734565  [32032/44871]  [0:01:47 < 0:00:42]\n",
+      "Accuracy: 21.3%, Avg loss: 5.213295  [35232/44871]  [0:01:57 < 0:00:32]\n",
+      "Accuracy: 18.8%, Avg loss: 5.510273  [38432/44871]  [0:02:07 < 0:00:21]\n",
+      "Accuracy: 20.3%, Avg loss: 5.429230  [41632/44871]  [0:02:17 < 0:00:10]\n",
+      "Accuracy: 18.9%, Avg loss: 5.406403  [44832/44871]  [0:02:27 < 0:00:00]\n",
+      "Validation Error: \n",
+      " Accuracy: 16.9%, Avg loss: 6.739025 \n",
+      "\n",
+      "Done!\n"
      ]
     }
    ],
