--- a/transformer_from_scratch/transformer_from_scratch.ipynb
+++ b/transformer_from_scratch/transformer_from_scratch.ipynb
@@ -91,27 +91,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset = Dataset(name=\"wmt14\", language=\"de-en\", percentage=10)"
+    "dataset = Dataset(name=\"wmt14\", language=\"de-en\", percentage=100)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6398adf8b2614c428b894db9c699134c",
+       "model_id": "760d6fa56379414ab3a6c6cc55c4e65b",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Map (num_proc=32):   0%|          | 0/450878 [00:00<?, ? examples/s]"
+       "Map (num_proc=32):   0%|          | 0/45088 [00:00<?, ? examples/s]"
       ]
      },
      "metadata": {},
@@ -120,7 +120,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c6af4d582d584a4385760e6c87094142",
+       "model_id": "64998f299d854258baa836bf5a2013ac",
        "version_major": 2,
        "version_minor": 0
       },
@@ -134,7 +134,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d587df88b2344cc1a4d06be28507c961",
+       "model_id": "80180ff2803b4e638327cd1729a92507",
        "version_major": 2,
        "version_minor": 0
       },
@@ -152,18 +152,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f04e76730565425da2ccee0202c6e6cf",
+       "model_id": "de4339d6f7cc499c90923f599e307e43",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Filter:   0%|          | 0/450878 [00:00<?, ? examples/s]"
+       "Filter:   0%|          | 0/45088 [00:00<?, ? examples/s]"
       ]
      },
      "metadata": {},
@@ -172,12 +172,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d29713bd9a9b44b78127e7bcfed3223c",
+       "model_id": "ce99ad43e4cd44768de16ccb147909e5",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Map (num_proc=32):   0%|          | 0/450878 [00:00<?, ? examples/s]"
+       "Map (num_proc=32):   0%|          | 0/45088 [00:00<?, ? examples/s]"
       ]
      },
      "metadata": {},
@@ -186,7 +186,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3f67c03d6ea449c19cdd93db4d1da928",
+       "model_id": "12cfc662f1b34edbbad021960baf7f0f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -200,7 +200,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c38432cdd56f4256833954641c98630f",
+       "model_id": "a4f2bd111c7645e496f733ba9c6c6cb7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -214,7 +214,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ade2173ea4db4ca3acdc30a89578282c",
+       "model_id": "7b1653e27e0043e6aae6804a27bc449c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -228,7 +228,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fd4c9f6c827f44ec93273d6e332eb796",
+       "model_id": "dda0988e4a5d413c9114269013bec1b4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -292,41 +292,41 @@
       "|===========================================================================|\n",
       "|        Metric         | Cur Usage  | Peak Usage | Tot Alloc  | Tot Freed  |\n",
       "|---------------------------------------------------------------------------|\n",
-      "| Allocated memory      |    913 MiB |   7976 MiB | 210928 GiB | 210927 GiB |\n",
-      "|       from large pool |    656 MiB |   7717 MiB | 205547 GiB | 205546 GiB |\n",
-      "|       from small pool |    256 MiB |    418 MiB |   5381 GiB |   5381 GiB |\n",
+      "| Allocated memory      |   4112 MiB |   6607 MiB |   6075 GiB |   6071 GiB |\n",
+      "|       from large pool |   3939 MiB |   6433 MiB |   6012 GiB |   6008 GiB |\n",
+      "|       from small pool |    173 MiB |    298 MiB |     63 GiB |     62 GiB |\n",
       "|---------------------------------------------------------------------------|\n",
-      "| Active memory         |    913 MiB |   7976 MiB | 210928 GiB | 210927 GiB |\n",
-      "|       from large pool |    656 MiB |   7717 MiB | 205547 GiB | 205546 GiB |\n",
-      "|       from small pool |    256 MiB |    418 MiB |   5381 GiB |   5381 GiB |\n",
+      "| Active memory         |   4112 MiB |   6607 MiB |   6075 GiB |   6071 GiB |\n",
+      "|       from large pool |   3939 MiB |   6433 MiB |   6012 GiB |   6008 GiB |\n",
+      "|       from small pool |    173 MiB |    298 MiB |     63 GiB |     62 GiB |\n",
       "|---------------------------------------------------------------------------|\n",
-      "| Requested memory      |    913 MiB |   7976 MiB | 210870 GiB | 210869 GiB |\n",
-      "|       from large pool |    656 MiB |   7717 MiB | 205489 GiB | 205488 GiB |\n",
-      "|       from small pool |    256 MiB |    418 MiB |   5381 GiB |   5380 GiB |\n",
+      "| Requested memory      |   4112 MiB |   6607 MiB |   6074 GiB |   6070 GiB |\n",
+      "|       from large pool |   3939 MiB |   6433 MiB |   6011 GiB |   6007 GiB |\n",
+      "|       from small pool |    173 MiB |    298 MiB |     63 GiB |     62 GiB |\n",
       "|---------------------------------------------------------------------------|\n",
-      "| GPU reserved memory   |   1488 MiB |  11270 MiB |  41858 MiB |  40370 MiB |\n",
-      "|       from large pool |   1226 MiB |  10884 MiB |  40808 MiB |  39582 MiB |\n",
-      "|       from small pool |    262 MiB |    430 MiB |   1050 MiB |    788 MiB |\n",
+      "| GPU reserved memory   |   4490 MiB |   9880 MiB |   9880 MiB |   5390 MiB |\n",
+      "|       from large pool |   4314 MiB |   9580 MiB |   9580 MiB |   5266 MiB |\n",
+      "|       from small pool |    176 MiB |    300 MiB |    300 MiB |    124 MiB |\n",
       "|---------------------------------------------------------------------------|\n",
-      "| Non-releasable memory | 588544 KiB |   3205 MiB |  96247 GiB |  96246 GiB |\n",
-      "|       from large pool | 583092 KiB |   3176 MiB |  90440 GiB |  90439 GiB |\n",
-      "|       from small pool |   5452 KiB |     37 MiB |   5807 GiB |   5807 GiB |\n",
+      "| Non-releasable memory | 386462 KiB |   1290 MiB |   2404 GiB |   2404 GiB |\n",
+      "|       from large pool | 383968 KiB |   1290 MiB |   2330 GiB |   2329 GiB |\n",
+      "|       from small pool |   2494 KiB |      5 MiB |     74 GiB |     74 GiB |\n",
       "|---------------------------------------------------------------------------|\n",
-      "| Allocations           |    1158    |    1864    |   31226 K  |   31225 K  |\n",
-      "|       from large pool |      21    |     289    |    9391 K  |    9391 K  |\n",
-      "|       from small pool |    1137    |    1797    |   21835 K  |   21834 K  |\n",
+      "| Allocations           |    1383    |    1839    |  587353    |  585970    |\n",
+      "|       from large pool |     217    |     236    |  268259    |  268042    |\n",
+      "|       from small pool |    1166    |    1816    |  319094    |  317928    |\n",
       "|---------------------------------------------------------------------------|\n",
-      "| Active allocs         |    1158    |    1864    |   31226 K  |   31225 K  |\n",
-      "|       from large pool |      21    |     289    |    9391 K  |    9391 K  |\n",
-      "|       from small pool |    1137    |    1797    |   21835 K  |   21834 K  |\n",
+      "| Active allocs         |    1383    |    1839    |  587353    |  585970    |\n",
+      "|       from large pool |     217    |     236    |  268259    |  268042    |\n",
+      "|       from small pool |    1166    |    1816    |  319094    |  317928    |\n",
       "|---------------------------------------------------------------------------|\n",
-      "| GPU reserved segments |     146    |     348    |    1099    |     953    |\n",
-      "|       from large pool |      15    |     161    |     574    |     559    |\n",
-      "|       from small pool |     131    |     215    |     525    |     394    |\n",
+      "| GPU reserved segments |     199    |     272    |     272    |      73    |\n",
+      "|       from large pool |     111    |     122    |     122    |      11    |\n",
+      "|       from small pool |      88    |     150    |     150    |      62    |\n",
       "|---------------------------------------------------------------------------|\n",
-      "| Non-releasable allocs |      46    |     136    |   15513 K  |   15513 K  |\n",
-      "|       from large pool |      18    |     100    |    4986 K  |    4986 K  |\n",
-      "|       from small pool |      28    |      56    |   10527 K  |   10527 K  |\n",
+      "| Non-releasable allocs |      48    |      63    |  267232    |  267184    |\n",
+      "|       from large pool |      45    |      51    |  147088    |  147043    |\n",
+      "|       from small pool |       3    |      24    |  120144    |  120141    |\n",
       "|---------------------------------------------------------------------------|\n",
       "| Oversize allocations  |       0    |       0    |       0    |       0    |\n",
       "|---------------------------------------------------------------------------|\n",
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -363,79 +363,16 @@
      "text": [
       "-------------------------------\n",
       "Epoch 1/1\n",
-      "Accuracy: 0.0%, Avg loss: 10.600394  [    64/450878]  [0:00:00 < 1:07:33]\n",
-      "Accuracy: 6.1%, Avg loss: 9.508562  [  6464/450878]  [0:00:11 < 0:13:04]\n",
-      "Accuracy: 9.2%, Avg loss: 8.594700  [ 12864/450878]  [0:00:21 < 0:12:21]\n",
-      "Accuracy: 10.1%, Avg loss: 7.280375  [ 19264/450878]  [0:00:32 < 0:12:00]\n",
-      "Accuracy: 12.1%, Avg loss: 6.516609  [ 25664/450878]  [0:00:42 < 0:11:43]\n",
-      "Accuracy: 15.1%, Avg loss: 6.074619  [ 32064/450878]  [0:00:52 < 0:11:31]\n",
-      "Accuracy: 16.4%, Avg loss: 6.044272  [ 38464/450878]  [0:01:03 < 0:11:18]\n",
-      "Accuracy: 16.7%, Avg loss: 5.908104  [ 44864/450878]  [0:01:13 < 0:11:05]\n",
-      "Accuracy: 17.3%, Avg loss: 5.831823  [ 51264/450878]  [0:01:25 < 0:11:04]\n",
-      "Accuracy: 19.1%, Avg loss: 5.533202  [ 57664/450878]  [0:01:35 < 0:10:50]\n",
-      "Accuracy: 19.4%, Avg loss: 5.604733  [ 64064/450878]  [0:01:45 < 0:10:38]\n",
-      "Accuracy: 20.9%, Avg loss: 5.427184  [ 70464/450878]  [0:01:55 < 0:10:25]\n",
-      "Accuracy: 22.5%, Avg loss: 5.256050  [ 76864/450878]  [0:02:06 < 0:10:14]\n",
-      "Accuracy: 21.2%, Avg loss: 5.180013  [ 83264/450878]  [0:02:16 < 0:10:03]\n",
-      "Accuracy: 21.0%, Avg loss: 5.363179  [ 89664/450878]  [0:02:26 < 0:09:52]\n",
-      "Accuracy: 22.1%, Avg loss: 5.331246  [ 96064/450878]  [0:02:37 < 0:09:40]\n",
-      "Accuracy: 23.2%, Avg loss: 5.161789  [102464/450878]  [0:02:47 < 0:09:29]\n",
-      "Accuracy: 23.8%, Avg loss: 4.974470  [108864/450878]  [0:03:01 < 0:09:29]\n",
-      "Accuracy: 26.2%, Avg loss: 4.986141  [115264/450878]  [0:03:12 < 0:09:20]\n",
-      "Accuracy: 25.8%, Avg loss: 4.939037  [121664/450878]  [0:03:22 < 0:09:09]\n",
-      "Accuracy: 26.0%, Avg loss: 4.776317  [128064/450878]  [0:03:33 < 0:08:57]\n",
-      "Accuracy: 28.4%, Avg loss: 4.716222  [134464/450878]  [0:03:43 < 0:08:46]\n",
-      "Accuracy: 23.5%, Avg loss: 4.897870  [140864/450878]  [0:03:54 < 0:08:36]\n",
-      "Accuracy: 27.0%, Avg loss: 4.752615  [147264/450878]  [0:04:04 < 0:08:24]\n",
-      "Accuracy: 25.9%, Avg loss: 4.604896  [153664/450878]  [0:04:15 < 0:08:13]\n",
-      "Accuracy: 27.4%, Avg loss: 4.602763  [160064/450878]  [0:04:25 < 0:08:02]\n",
-      "Accuracy: 26.2%, Avg loss: 4.794686  [166464/450878]  [0:04:35 < 0:07:51]\n",
-      "Accuracy: 26.4%, Avg loss: 4.667959  [172864/450878]  [0:04:46 < 0:07:40]\n",
-      "Accuracy: 27.7%, Avg loss: 4.472009  [179264/450878]  [0:04:57 < 0:07:30]\n",
-      "Accuracy: 27.3%, Avg loss: 4.589384  [185664/450878]  [0:05:07 < 0:07:19]\n",
-      "Accuracy: 27.2%, Avg loss: 4.493224  [192064/450878]  [0:05:18 < 0:07:08]\n",
-      "Accuracy: 27.4%, Avg loss: 4.542507  [198464/450878]  [0:05:28 < 0:06:57]\n",
-      "Accuracy: 28.4%, Avg loss: 4.414369  [204864/450878]  [0:05:38 < 0:06:46]\n",
-      "Accuracy: 27.2%, Avg loss: 4.643216  [211264/450878]  [0:05:48 < 0:06:35]\n",
-      "Accuracy: 28.6%, Avg loss: 4.554634  [217664/450878]  [0:06:01 < 0:06:27]\n",
-      "Accuracy: 30.0%, Avg loss: 4.333509  [224064/450878]  [0:06:12 < 0:06:17]\n",
-      "Accuracy: 30.1%, Avg loss: 4.381060  [230464/450878]  [0:06:23 < 0:06:06]\n",
-      "Accuracy: 30.2%, Avg loss: 4.425732  [236864/450878]  [0:06:33 < 0:05:55]\n",
-      "Accuracy: 31.2%, Avg loss: 4.441890  [243264/450878]  [0:06:45 < 0:05:45]\n",
-      "Accuracy: 27.6%, Avg loss: 4.395536  [249664/450878]  [0:06:55 < 0:05:34]\n",
-      "Accuracy: 29.6%, Avg loss: 4.339670  [256064/450878]  [0:07:05 < 0:05:23]\n",
-      "Accuracy: 29.5%, Avg loss: 4.296123  [262464/450878]  [0:07:16 < 0:05:13]\n",
-      "Accuracy: 28.7%, Avg loss: 4.469353  [268864/450878]  [0:07:26 < 0:05:02]\n",
-      "Accuracy: 31.0%, Avg loss: 4.306387  [275264/450878]  [0:07:36 < 0:04:51]\n",
-      "Accuracy: 32.0%, Avg loss: 4.169805  [281664/450878]  [0:07:46 < 0:04:40]\n",
-      "Accuracy: 31.0%, Avg loss: 4.099805  [288064/450878]  [0:07:57 < 0:04:29]\n",
-      "Accuracy: 31.4%, Avg loss: 4.106005  [294464/450878]  [0:08:07 < 0:04:18]\n",
-      "Accuracy: 33.6%, Avg loss: 4.022972  [300864/450878]  [0:08:19 < 0:04:09]\n",
-      "Accuracy: 31.0%, Avg loss: 4.201358  [307264/450878]  [0:08:30 < 0:03:58]\n",
-      "Accuracy: 32.9%, Avg loss: 4.188448  [313664/450878]  [0:08:40 < 0:03:47]\n",
-      "Accuracy: 33.3%, Avg loss: 3.957568  [320064/450878]  [0:08:50 < 0:03:36]\n",
-      "Accuracy: 34.9%, Avg loss: 3.930378  [326464/450878]  [0:09:00 < 0:03:26]\n",
-      "Accuracy: 30.5%, Avg loss: 4.135233  [332864/450878]  [0:09:11 < 0:03:15]\n",
-      "Accuracy: 34.0%, Avg loss: 3.991987  [339264/450878]  [0:09:21 < 0:03:04]\n",
-      "Accuracy: 33.3%, Avg loss: 3.788705  [345664/450878]  [0:09:31 < 0:02:54]\n",
-      "Accuracy: 30.2%, Avg loss: 4.133511  [352064/450878]  [0:09:43 < 0:02:43]\n",
-      "Accuracy: 32.3%, Avg loss: 4.035072  [358464/450878]  [0:09:55 < 0:02:33]\n",
-      "Accuracy: 34.1%, Avg loss: 4.018539  [364864/450878]  [0:10:06 < 0:02:23]\n",
-      "Accuracy: 33.9%, Avg loss: 3.991220  [371264/450878]  [0:10:17 < 0:02:12]\n",
-      "Accuracy: 30.5%, Avg loss: 4.149120  [377664/450878]  [0:10:27 < 0:02:01]\n",
-      "Accuracy: 31.2%, Avg loss: 4.237926  [384064/450878]  [0:10:37 < 0:01:50]\n",
-      "Accuracy: 33.8%, Avg loss: 3.786852  [390464/450878]  [0:10:48 < 0:01:40]\n",
-      "Accuracy: 34.0%, Avg loss: 3.834055  [396864/450878]  [0:10:58 < 0:01:29]\n",
-      "Accuracy: 34.3%, Avg loss: 3.831371  [403264/450878]  [0:11:08 < 0:01:18]\n",
-      "Accuracy: 31.7%, Avg loss: 4.025260  [409664/450878]  [0:11:19 < 0:01:08]\n",
-      "Accuracy: 33.8%, Avg loss: 3.871789  [416064/450878]  [0:11:29 < 0:00:57]\n",
-      "Accuracy: 31.5%, Avg loss: 4.072171  [422464/450878]  [0:11:40 < 0:00:47]\n",
-      "Accuracy: 33.9%, Avg loss: 3.874884  [428864/450878]  [0:11:50 < 0:00:36]\n",
-      "Accuracy: 37.8%, Avg loss: 3.675547  [435264/450878]  [0:12:02 < 0:00:25]\n",
-      "Accuracy: 32.6%, Avg loss: 3.939601  [441664/450878]  [0:12:13 < 0:00:15]\n",
-      "Accuracy: 37.6%, Avg loss: 3.715786  [448064/450878]  [0:12:23 < 0:00:04]\n",
+      "Accuracy: 0.0%, Avg loss: 198.035095  [   64/45088]  [0:00:00 < 0:04:24]\n",
+      "Accuracy: 0.0%, Avg loss: 60.436619  [ 6464/45088]  [0:00:11 < 0:01:10]\n",
+      "Accuracy: 1.4%, Avg loss: 35.917984  [12864/45088]  [0:00:22 < 0:00:57]\n",
+      "Accuracy: 3.3%, Avg loss: 31.883329  [19264/45088]  [0:00:34 < 0:00:46]\n",
+      "Accuracy: 4.5%, Avg loss: 27.792080  [25664/45088]  [0:00:45 < 0:00:34]\n",
+      "Accuracy: 6.9%, Avg loss: 26.025768  [32064/45088]  [0:00:57 < 0:00:23]\n",
+      "Accuracy: 8.9%, Avg loss: 24.402964  [38464/45088]  [0:01:12 < 0:00:12]\n",
+      "Accuracy: 8.5%, Avg loss: 23.224152  [44864/45088]  [0:01:24 < 0:00:00]\n",
       "Validation Error: \n",
-      " Accuracy: 23.1%, Avg loss: 5.704027 \n",
+      " Accuracy: 7.8%, Avg loss: 27.171804 \n",
       "\n",
       "Done!\n"
      ]
